updated readme and final notebooks and images

--- a/Project_Overview.ipynb
+++ b/Project_Overview.ipynb
@@ -22,6 +22,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Scrapper "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data scrapper uses Poplib to access and pull all the new email information from the olinsnapshot@gmail.com account. It parses it and stores into an appropriate csv file. Annotation/Labeling of the tag will need to be done independantly on the file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Exploration:\n"
    ]
   },
@@ -29,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our data exploration sought to find patterns about the subject and body text data that is provided to us."
+    "The data exploration sought to find patterns about the subject and body text data that is provided to us. However, the serious lack of sufficient data resulted in sub-par visualizations as it was hard to generalize about the words within the text of the body of the email. "
    ]
   },
   {
@@ -45,13 +59,11 @@
    "source": [
     "I tried two main algorithms: Bag of Words with SciKit Learn and Naive Bayesian by Hand\n",
     "\n",
-    "Bag of words consists of transforming each data point (sentence) into a sparse vector that corresponds a consistent row of word - index relationship. This can be easily done using scikit-learns Count Vectorizer. However the preprocessing of the data can result in different results. We tried to use our insights from the data exploration to in addition to removing a list of stopwords from online to improve the choosing the most influential word. However, because we our exploration lacked enough data to really extract useful features and insights I stuck with the original model and vectorizing tool, which is able to refer to outside langauge data.\n",
+    "Bag of words consists of transforming each data point (sentence) into a sparse vector that corresponds a consistent row of word - index relationship. This can be easily done using scikit-learns Count Vectorizer. However the preprocessing of the data can result in different results. I tried to use the insights from the data exploration to in addition to removing a list of stopwords from online to improve the choosing the most influential word. However, because the exploration lacked enough data to really extract useful features and insights I stuck with the original model and vectorizing tool, which is able to refer to outside langauge data.\n",
     "\n",
     "We first followed the bag of words kaggle tutorial (https://www.kaggle.com/c/word2vec-nlp-tutorial/details/part-1-for-beginners-bag-of-words) to create a (256060, 1000) bag of words as a feature map, and applied random forest classification to fit our trainning data. Due to limitedness of memory, we were only able to perform random forest classification at tree level of 10.\n",
     "\n",
     "Naive Bayesian is a simple but powerful probabilistic classifier that relies on applying Baye’s theorem to data by assuming that the features (in a bag of words case each word feature) are strongly independent. I specifically chose to do our own implementation because of the simplistic nature but also common application of this technique in sentiment analysis. To learn about the math and its applications to sentiment analysis I followed http://blog.datumbox.com/machine-learning-tutorial-the-naive-bayes-text-classifier/ as a guide and then created our own implementation of the mathematical equations for Multinomial Bayesian Classifier, Multinomial Bayesian Classifier with smoothing, and Binarized Multinomial Bayesian Classifier with smoothing.\n",
-    "\n",
-    "\n",
     "\n",
     "Math and Code Explanation:\n",
     "\n",
@@ -65,23 +77,13 @@
     "\n",
     "Finally the model can be improved by adding smoothing factors to the calculation of the word probabilities.\n",
     "\n",
+    "I implemented both\n",
+    "\n",
     "Multinomial Naive Bayesian\n",
-    "Reference-style: \n",
-    "![alt text][logo]\n",
+    "![Multinomial Naive Bayesian](./images/n_b_equation.png) \n",
     "\n",
-    "[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 2\"\n",
     "Multinomial Naive Bayesian w/ Smoothing\n",
-    "\n",
-    "Reference-style: \n",
-    "![alt text][logo]\n",
-    "\n",
-    "[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 2\"\n",
-    "\n",
-    "Lessons Learned from implementing different Bayesian classifiers\n",
-    "\n",
-    "Smoothing makes a big difference. a. We specifically implemented smoothing by adding 1 as part of additive smoothing b. We made the impact of any word that didn’t exist irrelevant c. We added the total # of the frequency of that word as a smoothing factor\n",
-    "Binarized was an expected and actual improvement because a. We only care about whether the word occurs in the sentence not how many times b. By only counting a word once we reduce the impact and risk of overfitting\n",
-    "We started off by doing a multinomial naive bayesian model without any smoothing. Adding smoothing improved the score significantly and then we only counted the frequency of words inside a particular phrase bc we care about whether the word exist rather than how many times it occurs (Binarized multinomial). Our final combination of Binarized multinomial bayes with smoothing was the best outcome."
+    "![Multinomial Naive Bayesian w/ Smoothing](./images/n_b_s_equation.png)\n"
    ]
   },
   {
@@ -112,16 +114,21 @@
     "    b. things for sale\n",
     "    c. housing offers\n",
     "2. Variable inclusion and formating of temporal and location data\n",
-    "3. Dealing with Re:'s \n",
+    "3. Dealing with Re:'s and email chains\n",
     "\n",
+    "Given the constraints I propose the following system:\n",
     "\n",
-    "Given the constraints I propose a potential system consisting of the following pieces:\n",
+    "![System Diagram](./images/system.jpg)\n",
     "\n",
-    "1. Email Scrapper through Pop (can use the Data Scrapping and Processing Code) \n",
-    "2. \n",
-    "3. Database \n",
-    "4. App with classification algorithm "
+    "Through Poplib each time an email is forwarded it will be grabbed and passed into MongoDB. Because Poplib only looks at new emails it will ignore the old ones, each time it pulls from the olinsnapshot@gmail.com account. The information will be automatically stored in the MongoDB database of the ABE backend. An adapted version of the ABE_Tagger could run concurrently with the trained classification algorithm and apply it to each entry. A seperate Event_Manager would take each individual entry and determine whether it is unique and thus create an appropriate new event or identify an older event and append the new body information onto the already existing event. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
