--- a/Project_Overview.ipynb
+++ b/Project_Overview.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Project Introduction:\n",
     "\n",
-    "This project is intended to be an initial exploration and creation of a potential classification machine learning algorithm that can be used and integrated into the Olin ABE(Amorphous Blob of Events), a platform that enables tthe creation of digitial experiences that share information about past, present, and upcoming events. \n",
+    "This project is intended to be an initial exploration and creation of a potential classification machine learning algorithm that can be used and integrated into the Olin ABE(Amorphous Blob of Events), a platform that enables the creation of digital experiences that share information about past, present, and upcoming events. \n",
     "\n",
     "Today email is an essential part of how Olin communicates and conveys information, there exists lists such as carpediem which are used solely to convey information about things that are happening. Ideally this information could be automatically captured by ABE amd turned into an event; however, the format of carpediem emails is non standard. Thus, a system must be designed and created to extract, load, and create an appropriate event for the email depending on the information inside. One aspect of this system would be a method to create an appropriate tag or tags for the project based on the content of the email. \n"
    ]
